; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Database.c_LiIsLicenseKey.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Database.c_LiIsLicenseKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LiIsLicenseKey(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca [23 x i32], align 16
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = icmp eq i8* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %15

8:                                                ; preds = %1
  %9 = getelementptr inbounds [23 x i32], [23 x i32]* %4, i64 0, i64 0
  %10 = load i8*, i8** %3, align 8
  %11 = call i32 @LiStrToKeyBit(i32* %9, i8* %10)
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %15

14:                                               ; preds = %8
  store i32 1, i32* %2, align 4
  br label %15

15:                                               ; preds = %14, %13, %7
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @LiStrToKeyBit(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
